--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ baseurl = "https://whiletruelearn.github.io/"
 title =  "whiletruelearn"
 theme = "hugo-theme-console"
 languageCode = "en-us"
-
+publishDir = "docs"
 [params]
   # Cutting off the page title to two chars for mobile (console-demo -> co)
   titleCutting = false
