--- a/config.toml
+++ b/config.toml
@@ -12,4 +12,8 @@ languageCode = "en-us"
   name = "essays"
   url = "essays/"
 
+  [[params.navlinks]]
+  name = "projects"
+  url = "projects/"
+
 
