Moving some of the old stories written to one place

--- a/config.toml
+++ b/config.toml
@@ -16,4 +16,7 @@ languageCode = "en-us"
   name = "projects"
   url = "projects/"
 
+  [[params.navlinks]]
+  name = "stories"
+  url = "stories/"
 
